# transparencies-backend-rs

./: .clog.toml  .dockerignore  .gitignore  .markdownlint.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  TODO  TODO.md  cargo-generate.toml  changelog.toml  config_fast_builds  justfile  release.toml  rustfmt-nightly.toml  rustfmt.toml  sweep.timestamp  teams.json
.github/workflows/: binaries.yml  rust.yml
configuration/: base.toml  base.yaml  local.toml  production.toml
crates/aoe2net/: Cargo.toml
crates/aoe2net/src/: lib.rs
crates/aoe2net/src/endpoints/: strings.rs
crates/api/aoe2net/: CHANGELOG.md  Cargo.toml
crates/api/aoe2net/src/: lib.rs
crates/api/aoe2net/src/endpoints/: last_match.rs  leaderboard.rs  lobbies.rs  match.rs  match_history.rs  matches.rs  mod.rs  rating.rs  rating_history.rs  stats_players.rs  strings.rs
crates/api/aoe2net/src/types/: api.rs  error.rs  helper.rs  mod.rs
crates/api/github/: Cargo.toml
crates/api/github/src/: lib.rs
crates/api/github/src/types/: api.rs
crates/api_client/: Cargo.toml
crates/api_client/src/: client.rs  error.rs  lib.rs  request.rs  response.rs  ser.rs
docs/: api-handler.drawio  internal-data-processing.drawio  systems-architecture.drawio
examples/: export_test_data.rs  import_test_data.rs  new_client.rs  test_sample.rs
src/: cli.rs  client.rs  configuration.rs  lib.rs  main.rs  startup.rs
src/api_responses/: mod.rs
src/api_responses/aoe2net/: leaderboard.rs  rating_history.rs
src/config/: cli.rs  configuration.rs  mod.rs  startup.rs
src/domain/: mod.rs  util.rs
src/domain/api_handler/: client.rs  client_new.rs  mod.rs
src/domain/api_handler/openapi/: mod.rs
src/domain/api_handler/response/aoc_ref/: mod.rs  platforms.rs  teams.rs
src/domain/api_handler/response/aoe2net/: last_match.json  last_match.rs  lastmatch.rs  leaderboard.rs  mod.rs  rating_history.rs
src/domain/api_handler/response_datastructures/aoe2net/: mod.rs
src/domain/api_handler/utils/: parse.rs
src/domain/data_processing/: error.rs  match_data_responder.rs  match_info_processor.rs  mod.rs  reference_data_handler.rs
src/domain/in_memory_db/: data_preloading.rs  mod.rs  reference_data_handler.rs
src/domain/types/: aoe2net.rs  error.rs  match_data.rs  mod.rs  requests.rs  testing.rs
src/domain/types/aoc_ref/: mod.rs  platforms.rs  players.rs  teams.rs
src/domain/types/aoe2net/: leaderboard.rs  rating_history.rs
src/domain/types/api/: match_info.rs  match_info_response.rs  mod.rs
src/persistence/: mod.rs
src/persistence/in_memory_db/: data_preloading.rs  mod.rs
src/routes/: health_check.rs  matchinfo.rs  mod.rs
src/server/: filters.rs  handlers.rs  mod.rs  models.rs
src/server/models/: match_info.rs  mod.rs
src/setup/: cli.rs  configuration.rs  mod.rs  startup.rs  telemetry.rs
tests/: _test_cli.rs  endpoints.rs  get_aoc_data.bat  health_check.rs  matchinfo.rs  test_cli.rs
tests/matchinfo-integration/: main.rs
tests/matchinfo-integration/last_match_404/: match_info_request.ron  match_info_result.ron
tests/matchinfo-integration/resources/: match_info_result.ron
tests/matchinfo-integration/resources/aoe2net/: last_match.json
tests/matchinfo-integration/resources/aoe2net/leaderboard/: 196240.json  4240386.json  459658.json
tests/matchinfo-integration/resources/aoe2net/rating_history/: 196240.json  4240386.json  459658.json
tests/matchinfo-integration/resources/languages/: de.json  el.json  en.json  es-MX.json  es.json  fr.json  hi.json  it.json  ja.json  ko.json  ms.json  nl.json  pt.json  ru.json  tr.json  vi.json  zh-TW.json  zh.json
tests/matchinfo-integration/resources/ref-data/: platforms.json  players.json
tests/matchinfo-integration/standard/: match_info_request.ron  match_info_result.ron
tests/matchinfo-integration/standard/aoe2net/: last_match.json
tests/matchinfo-integration/standard/aoe2net/leaderboard/: 196240.json  4240386.json
tests/matchinfo-integration/standard/aoe2net/rating_history/: 196240.json  4240386.json  459658.json
tests/matchinfo-integration/standard/languages/: de.json  el.json  es-MX.json  es.json  hi.json  it.json  ja.json  ko.json  nl.json  ru.json  zh.json
tests/matchinfo-integration/standard/ref-data/: players.json  teams.json
