[package]
name = "transparencies-backend-rs"
publish = false
version = "0.0.1"
authors = ["the transparencies authors"]
edition = "2018"
repository = "https://github.com/transparencies/transparencies-backend-rs"
documentation = ""
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = [""]
categories = [""]
description = """
A foundation for building dynamic stream overlays written in Rust
"""
[package.metadata.release]
upload-doc = true
no-dev-version = true
pre-release-commit-message = "Release {{crate_name}} {{version}} / {{date}}"

[lib]
path = "src/lib.rs"
test = true                                 
doctest = true                              
bench = true                                
doc = true                                 
harness = true                             
edition = "2018"

[[bin]]
name = "transparencies-backend-rs"          
path = "src/bin/transparencies-server.rs"   
test = true                                 
bench = true                                
doc = true                                  
harness = true                              
edition = "2018"                            
#required-features = []                     # Features required to build this target (N/A for lib).


[[example]]
name = "export-test-data"                  
path = "examples/export_test_data.rs"       
test = true                                
bench = true                               
doc = true                                  
harness = true                             
edition = "2018" 

[[test]]
name = "full-integration"                       
path = "tests/matchinfo-integration/main.rs"
test = true                                 
bench = true                                
doc = true                                 
harness = true                             
edition = "2018" 

# For benchmarks
#[[bench]]

[dependencies]
# Error handling
human-panic = "1.0.3"
eyre = "0.6.5"
stable-eyre = "0.2.2"
thiserror = "1.0.24"
displaydoc = "0.1.7"

# Logging
log = "0.4.14"
simple-log = "1.0.1"
tracing = "0.1.25"
tracing-subscriber = "0.2.16"
tracing-tree = "0.1.9"

# CLI
structopt = "0.3.21"

# Configuration
config = "0.10.1"
lazy_static = "1.4.0"

# config_struct = "0.5"
ron = "0.6.4"

# HTTP
reqwest = { version = "0.11.2", features = ["json", "rustls-tls"] }
warp = "0.3.0"
hyper = "0.14.4"
url = { version = "2.2.1", features = ["serde"] }

# async
tokio = { version = "1.3.0", features = ["full"] }
futures = "0.3.13"

# De-/Serialisation
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
#serde_any = { git = "https://github.com/simonsan/serde_any.git", version = "0.5.1", default-features = false, features = ["yaml", "toml", "json"]}
serde-aux = "2.1.1"
bytes = "1.0.1"

# Templating
# askama = "0.10"

# OpenAPI
#openapi_utils = "0.2.0"
#openapiv3 = "0.3.2"

# Utility
typed-builder = "0.9.0"
itertools = "0.10.0"
strum = { version = "0.20.0", features = ["derive"] }
derive_more = "0.99.11"
derive-getters = "0.2.0"
dashmap = { version = "4.0.2", features = ["serde", "rayon"] }

# Validation
#validators-derive = "0.22.3"
#validators = "0.22.3"

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.7"
pretty_assertions = "0.7.1"
claim = "0.5.0"
rstest = "0.6.4"
wiremock = "0.5.1"

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = true    # true for profiling
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = true            # true for profiling
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
