[package]
name = "transparencies-backend-rs"
version = "0.0.1"
authors = ["the transparencies authors"]
edition = "2018"
repository = "https://github.com/transparencies/transparencies-backend-rs"
documentation = ""
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = [""]
categories = [""]
description = """
A foundation for building dynamic stream overlays written in Rust
"""
[package.metadata.release]
upload-doc = true
pre-release-commit-message = "Release {{crate_name}} {{version}} / {{date}}"

[workspace]
members = [
    "crates/api/aoe2net",
    "crates/api_client",
]

[lib]
path = "src/lib.rs"
test = true                                 
doctest = true                              
bench = true                                
doc = true                                 
harness = true                             
edition = "2018"

[[bin]]
name = "transparencies-backend-rs"          
path = "src/bin/transparencies-server.rs"   
test = true                                 
bench = true                                
doc = true                                  
harness = true                              
edition = "2018"                            
#required-features = []                     # Features required to build this target (N/A for lib).


[[example]]
name = "export-test-data"                  
path = "examples/export_test_data.rs"       
test = true                                
bench = true                               
doc = true                                  
harness = true                             
edition = "2018" 

[[test]]
name = "full-integration"                       
path = "tests/matchinfo-integration/main.rs"
test = true                                 
bench = true                                
doc = true                                 
harness = true                             
edition = "2018" 

# For benchmarks
#[[bench]]

[dependencies]
# APIs
aoe2net = { path = "crates/api/aoe2net", version = "*" }

# API client
api-client = { path = "crates/api_client", version = "*" }

# Error handling
#human-panic = "1.0.3"
eyre = "0.6.6"
stable-eyre = "0.2.2"
thiserror = "1.0.30"
displaydoc = "0.2.3"

# Tracing/Logging
tracing-log = "0.1.2"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.6", features = ["registry", "env-filter"] }
tracing-tree = "0.2.0"
tracing-futures = "0.2.5"
tracing-bunyan-formatter = "0.3.2"
tracing-error = "0.2.0"

# CLI
structopt = "0.3.26"

# Configuration
config = "0.11.0"
lazy_static = "1.4.0"

# config_struct = "0.5"
ron = "0.7.0"

# HTTP
reqwest = { version = "0.11.9", features = ["json", "rustls-tls"] }
warp = "0.3.2"
hyper = "0.14.16"
url = { version = "2.2.2", features = ["serde"] }
http = "0.2.6"

# async
tokio = { version = "1.18.5", features = ["full"] }
futures = "0.3.19"

# De-/Serialisation
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"
serde_yaml = "0.8.23"
#serde_any = { git = "https://github.com/simonsan/serde_any.git", version = "0.5.1", default-features = false, features = ["yaml", "toml", "json"]}
serde-aux = "3.0.1"
bytes = "1.1.0"

# Templating
# askama = "0.10"

# OpenAPI
#openapi_utils = "0.2.0"
#openapiv3 = "0.3.2"

# Utility
typed-builder = "0.9.1"
#itertools = "0.10.0"
strum = { version = "0.23.0", features = ["derive"] }
#derive_more = "0.99.11"
derive-getters = "0.2.0"
dashmap = { version = "5.0.0", features = ["serde", "rayon"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
#derive_setters = "0.1.5"

# Validation
#validators-derive = "0.22.3"
#validators = "0.22.3"

[dev-dependencies]
#assert_cmd = "1.0.3"
#predicates = "1.0.7"
pretty_assertions = "1.0.0"
#claim = "0.5.0"
#rstest = "0.6.4"
wiremock = "0.5.10"
lazy_static = "1.4.0"

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = true    # true for profiling
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = true            # true for profiling
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
