[package]
name = "api-client"
version = "0.1.0"
authors = ["Simon <simon@systemli.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
displaydoc = "0.1.7"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
derive-getters = "0.2.0"
typed-builder = "0.9.0"

reqwest = { version = "0.11.2", features = ["json", "rustls-tls"] }
url = { version = "2.2.1", features = ["serde"] }
http = "0.2.3"

# async
tokio = { version = "1.3.0", features = ["full"] }
futures = "0.3.13"
async-trait = "0.1.48"
