[package]
name = "api-client"
version = "0.1.0"
authors = ["Emil Gardström <emil.gardstrom@gmail.com>", "Simon <simon@systemli.org>"]
edition = "2018"
repository = "https://github.com/Emilgardis/twitch_api2"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "1.0.24"
displaydoc = "0.1.7"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"

reqwest = { version = "0.11.2", features = ["json", "rustls-tls"] }
url = { version = "2.2.1", features = ["serde"] }
http = "0.2.3"

# async
tokio = { version = "1.3.0", features = ["full"] }
async-trait = "0.1.48"
