[package]
name = "api-client"
version = "0.1.0"
authors = ["Emil Gardström <emil.gardstrom@gmail.com>", "Simon <simon@systemli.org>"]
edition = "2018"
repository = "https://github.com/Emilgardis/twitch_api2"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "1.0.30"
displaydoc = "0.2.3"
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"

reqwest = { version = "0.11.9", features = ["json", "rustls-tls"] }
url = { version = "2.2.2", features = ["serde"] }
http = "0.2.6"

# async
tokio = { version = "1.18.4", features = ["full"] }
async-trait = "0.1.52"
