[package]
name = "aoe2net"
version = "0.1.0"
authors = ["Simon <simon@systemli.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
displaydoc = "0.2.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
derive-getters = "0.2.0"
thiserror = "1.0.29"
typed-builder = "0.9.1"
uuid = "0.8.2"

# async
tokio = { version = "1.11.0", features = ["full"] }
async-trait = "0.1.51"

# HTTP
api-client = { path = "../../api_client", version = "*" }
reqwest = { version = "0.11.4", features = ["json", "rustls-tls"] }
url = { version = "2.2.2", features = ["serde"] }
http = "0.2.4"
