[package]
name = "aoe2net"
version = "0.1.0"
authors = ["Simon <simon@systemli.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
displaydoc = "0.2.3"
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"
derive-getters = "0.2.0"
thiserror = "1.0.30"
typed-builder = "0.9.1"
uuid = "0.8.2"

# async
tokio = { version = "1.18.4", features = ["full"] }
async-trait = "0.1.52"

# HTTP
api-client = { path = "../../api_client", version = "*" }
reqwest = { version = "0.11.9", features = ["json", "rustls-tls"] }
url = { version = "2.2.2", features = ["serde"] }
http = "0.2.6"
